@@ -1,5 +1,6 @@
 package uk.nhs.adaptors.pss.translator.util;
 
+import java.util.Collections;
 import java.util.List;
 
 import lombok.AccessLevel;
@@ -20,10 +21,13 @@ public class ResourceUtil {
     private static final String IDENTIFIER_SYSTEM = "https://PSSAdaptor/%s";
 
     public static Meta generateMeta(String urlProfile) {
-        Meta meta = new Meta();
-        UriType profile = new UriType(String.format(META_PROFILE_TEMPLATE, urlProfile));
-        meta.setProfile(List.of(profile));
-        return meta;
+        return new Meta().setProfile(
+            Collections.singletonList(
+                new UriType(
+                    String.format(META_PROFILE_TEMPLATE, urlProfile)
+                )
+            )
+        );
     }
 
     public static Identifier buildIdentifier(String rootId, String practiseCode) {
